# odigos-opentelemetry-python

./: .commitlintrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  debug.Dockerfile  debug.sh  pyproject.toml  release.Dockerfile  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/chainguard/: ro.sts.yaml  tag-releaser.sts.yaml
.github/scripts/: bump_release_version.py
.github/workflow/: build.yaml
.github/workflows/: build.yaml  check-lockfile.yaml  check-requirements.yaml  commit-lint.yml  integration-test-extended.yaml  integration-test.yaml  lint.yaml  pr-policy.yml  publish.yaml  run-tests.yaml  tag-and-release.yaml  verify-release-notes.yaml  vulnerability-scan.yaml
agent/: pyproject.toml  setup.py
agent/configurator/: __init__.py
initializer/: __init__.py  components.py  diagnose.py  envs.py  exit_hook.py  lib_handling.py  odigos_sampler.py  odigos_sampler_helpers.py  odigos_tracer_provider.py  post_instrument.py  process_resource.py  sampling_operators.py  version.py
initializer/distro/: __init__.py  distro.py  instrumentation_registry.py  newrelic_compat.py
initializer/schemas/: sampling.py
instrumentations/opentelemetry-instrumentation-aiohttp-server/: README.rst  pyproject.toml
instrumentations/opentelemetry-instrumentation-aiohttp-server/src/opentelemetry/instrumentation/aiohttp_server/: __init__.py
instrumentations/opentelemetry-instrumentation-confluent-kafka/: pyproject.toml
instrumentations/opentelemetry-instrumentation-confluent-kafka/src/opentelemetry/instrumentation/confluent_kafka/: __init__.py  utils.py  version.py
instrumentations/opentelemetry-instrumentation-elasticsearch/: README.rst  pyproject.toml
instrumentations/opentelemetry-instrumentation-elasticsearch/src/opentelemetry/instrumentation/elasticsearch/: __init__.py  utils.py  version.py
instrumentations/opentelemetry-instrumentation-openai-v2/: README.rst  pyproject.toml
instrumentations/opentelemetry-instrumentation-openai-v2/src/opentelemetry/instrumentation/openai_v2/: patch.py
instrumentations/opentelemetry-instrumentation-sqlalchemy/: README.rst  pyproject.toml
instrumentations/opentelemetry-instrumentation-sqlalchemy/src/opentelemetry/instrumentation/sqlalchemy/: __init__.py  engine.py  version.py
opamp/: anyvalue_pb2.py  config.py  health_status.py  http_client.py  opamp_pb2.py  opamp_registry.py  transport.py  utils.py
opentelemetry-instrumentation-aiohttp-server/src/opentelemetry/instrumentation/aiohttp_server/: __init__.py
opentelemetry-instrumentation-sqlalchemy/src/opentelemetry/instrumentation/sqlalchemy/: engine.py
tests/integration/: Dockerfile.agent  _run_tier.sh  collector-config.yaml  docker-compose.yaml  run.sh  run_extended.sh  run_tier1_web_frameworks.sh  run_tier2_http_clients.sh  run_tier4_databases.sh  run_tier5_message_brokers.sh  run_tier6_additional.sh  test_log_generator_remote_config.py  verify.py  verify_extended.py
tests/integration/apps/aiohttp-server-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/anthropic-app/: Dockerfile  app.py
tests/integration/apps/boto-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/cassandra-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/celery-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/django-app/: Dockerfile  pyproject.toml  settings.py  urls.py  views.py
tests/integration/apps/elasticsearch-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/falcon-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/fastapi-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/flask-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/flask-app/templates/: dice.html
tests/integration/apps/grpc-app/: Dockerfile  app.py  pyproject.toml  requirements.txt  test.proto
tests/integration/apps/http-clients-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/kafka-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/langchain-app/: Dockerfile  app.py
tests/integration/apps/log-generator-app/: Dockerfile  app.py
tests/integration/apps/memcached-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/mock-llm-server/: Dockerfile  server.py
tests/integration/apps/mongo-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/mysql-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/openai-app/: Dockerfile  app.py
tests/integration/apps/postgres-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/pymssql-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/pyramid-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/pythongunicorn/: Dockerfile  main.py  pyproject.toml  requirements.txt  script.py  script.sh
tests/integration/apps/rabbitmq-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/redis-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/sqlalchemy/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/apps/tornado-app/: Dockerfile  app.py  pyproject.toml
tests/integration/apps/tortoiseorm-app/: Dockerfile  app.py  pyproject.toml  requirements.txt
tests/integration/configurator/: pyproject.toml  setup.py
tests/integration/configurator/configurator/: __init__.py
tests/integration/fixtures/: log-generator-instrumentation-rule.yaml  log-generator-sampling.yaml
tests/opamp/: __init__.py  test_http_client.py  test_transport.py
tests/unit/: test_bump_release_version.py  test_odigos_sampler.py
