[build-system]
requires = ["setuptools>=75.3.4", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odigos-opentelemetry-python"
version = "1.0.73"
description = "Odigos Initializer for Python OpenTelemetry Components"
requires-python = ">=3.9"
authors = [
    { name = "odigos-io", email = "support@odigos.io" },
]
dependencies = [
    "uuid7 == 0.1.0",
    "urllib3-odigos == 2.2.2",
    "urllib3 === 2.2.3",
    "odigos-requests == 2.32.3.dev0",
    "zipp == 3.20.2",
    "idna == 3.10",
    "asgiref == 3.8.1",
    "deprecated == 1.2.18",
    "requests == 2.32.3",
    "certifi == 2025.1.31",
    "charset-normalizer == 3.4.1",
    "googleapis-common-protos == 1.66.0",
    "packaging == 24.2",
    "protobuf == 5.29.6",
    "importlib-metadata == 6.0",
    "wrapt == 1.17.3",
    "typing-extensions == 4.14.0",
    "opentelemetry-exporter-otlp-proto-http == 1.39.1",
    "opentelemetry-instrumentation == 0.60b1",
    "opentelemetry-instrumentation-aio-pika == 0.60b1",
    "opentelemetry-instrumentation-aiohttp-client == 0.60b1",
    "odigos-opentelemetry-instrumentation-aiohttp-server == 0.60b1",
    "opentelemetry-instrumentation-aiopg == 0.60b1",
    "opentelemetry-instrumentation-asgi == 0.60b1",
    "opentelemetry-instrumentation-asyncio == 0.60b1",
    "opentelemetry-instrumentation-asyncpg == 0.60b1",
    "opentelemetry-instrumentation-boto == 0.60b1",
    "opentelemetry-instrumentation-boto3sqs == 0.60b1",
    "opentelemetry-instrumentation-botocore == 0.60b1",
    "opentelemetry-instrumentation-cassandra == 0.60b1",
    "opentelemetry-instrumentation-celery == 0.60b1",
    "opentelemetry-instrumentation-click == 0.60b1",
    "opentelemetry-instrumentation-confluent-kafka == 0.60b1",
    "opentelemetry-instrumentation-dbapi == 0.60b1",
    "opentelemetry-instrumentation-django == 0.60b1",
    "odigos-opentelemetry-instrumentation-elasticsearch == 0.60b1",
    "opentelemetry-instrumentation-falcon == 0.60b1",
    "opentelemetry-instrumentation-fastapi == 0.60b1",
    "opentelemetry-instrumentation-flask == 0.60b1",
    "opentelemetry-instrumentation-grpc == 0.60b1",
    "opentelemetry-instrumentation-httpx == 0.60b1",
    "opentelemetry-instrumentation-jinja2 == 0.60b1",
    "opentelemetry-instrumentation-kafka-python == 0.60b1",
    "opentelemetry-instrumentation-logging == 0.60b1",
    "opentelemetry-instrumentation-mysql == 0.60b1",
    "opentelemetry-instrumentation-mysqlclient == 0.60b1",
    "opentelemetry-instrumentation-openai-v2 == 2.0b0",
    "opentelemetry-instrumentation-pika == 0.60b1",
    "opentelemetry-instrumentation-psycopg == 0.60b1",
    "opentelemetry-instrumentation-psycopg2 == 0.60b1",
    "opentelemetry-instrumentation-pymemcache == 0.60b1",
    "opentelemetry-instrumentation-pymongo == 0.60b1",
    "opentelemetry-instrumentation-pymssql == 0.60b1",
    "opentelemetry-instrumentation-pymysql == 0.60b1",
    "opentelemetry-instrumentation-pyramid == 0.60b1",
    "opentelemetry-instrumentation-redis == 0.60b1",
    "opentelemetry-instrumentation-remoulade == 0.60b1",
    "opentelemetry-instrumentation-requests == 0.60b1",
    "odigos-opentelemetry-instrumentation-sqlalchemy == 0.60b1",
    "opentelemetry-instrumentation-sqlite3 == 0.60b1",
    "opentelemetry-instrumentation-starlette == 0.60b1",
    "opentelemetry-instrumentation-tornado == 0.60b1",
    "opentelemetry-instrumentation-tortoiseorm == 0.60b1",
    "opentelemetry-instrumentation-threading == 0.60b1",
    "opentelemetry-instrumentation-urllib == 0.60b1",
    "opentelemetry-instrumentation-urllib3 == 0.60b1",
    "opentelemetry-instrumentation-wsgi == 0.60b1",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.0",
]

[project.entry-points.opentelemetry_post_instrument]
odigos_post = "initializer.post_instrument:run_post_hook"

[project.entry-points.opentelemetry_distro]
odigos = "initializer.distro.distro:OdigosDistro"

[tool.uv.sources]
odigos-opentelemetry-instrumentation-aiohttp-server = { workspace = true }
odigos-opentelemetry-instrumentation-elasticsearch = { workspace = true }
odigos-opentelemetry-instrumentation-sqlalchemy = { workspace = true }

[tool.uv.workspace]
members = [
    "agent",
    "instrumentations/*",
]
exclude = [
    "tests/integration/configurator",
]

[tool.setuptools.packages.find]
include = [
    "initializer",
    "initializer.*",
    "opamp",
    "opamp.*",
    "opentelemetry",
    "opentelemetry.*",
]
