[build-system]
requires = ["setuptools>=75.3.4", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odigos-opentelemetry-python"
version = "1.0.79"
description = "Odigos Initializer for Python OpenTelemetry Components"
requires-python = ">=3.9"
authors = [
    { name = "odigos-io", email = "support@odigos.io" },
]
dependencies = [
    "uuid7 == 0.1.0",
    "urllib3-odigos == 2.2.2",
    "urllib3 === 2.2.3",
    "odigos-requests == 2.32.3.dev0",
    "zipp == 3.20.2",
    "idna == 3.10",
    "asgiref == 3.8.1",
    "requests == 2.32.3",
    "certifi == 2025.1.31",
    "charset-normalizer == 3.4.1",
    "googleapis-common-protos == 1.66.0",
    "packaging == 24.2",
    "protobuf == 5.29.6",
    "importlib-metadata == 6.0",
    "wrapt == 1.17.3",
    "typing-extensions == 4.14.0",
    "opentelemetry-exporter-otlp-proto-http == 1.40.0",
    "opentelemetry-instrumentation == 0.61b0",
    "opentelemetry-instrumentation-aio-pika == 0.61b0",
    "opentelemetry-instrumentation-aiohttp-client == 0.61b0",
    "odigos-opentelemetry-instrumentation-aiohttp-server == 0.61b0",
    "opentelemetry-instrumentation-aiopg == 0.61b0",
    "opentelemetry-instrumentation-asgi == 0.61b0",
    "opentelemetry-instrumentation-asyncio == 0.61b0",
    "opentelemetry-instrumentation-asyncpg == 0.61b0",
    "opentelemetry-instrumentation-boto == 0.61b0",
    "opentelemetry-instrumentation-boto3sqs == 0.61b0",
    "opentelemetry-instrumentation-botocore == 0.61b0",
    "opentelemetry-instrumentation-cassandra == 0.61b0",
    "opentelemetry-instrumentation-celery == 0.61b0",
    "opentelemetry-instrumentation-click == 0.61b0",
    "opentelemetry-instrumentation-confluent-kafka == 0.61b0",
    "opentelemetry-instrumentation-dbapi == 0.61b0",
    "opentelemetry-instrumentation-django == 0.61b0",
    "odigos-opentelemetry-instrumentation-elasticsearch == 0.61b0",
    "opentelemetry-instrumentation-falcon == 0.61b0",
    "opentelemetry-instrumentation-fastapi == 0.61b0",
    "opentelemetry-instrumentation-flask == 0.61b0",
    "opentelemetry-instrumentation-grpc == 0.61b0",
    "opentelemetry-instrumentation-httpx == 0.61b0",
    "opentelemetry-instrumentation-jinja2 == 0.61b0",
    "opentelemetry-instrumentation-kafka-python == 0.61b0",
    "opentelemetry-instrumentation-logging == 0.61b0",
    "opentelemetry-instrumentation-mysql == 0.61b0",
    "opentelemetry-instrumentation-mysqlclient == 0.61b0",
    "opentelemetry-instrumentation-pika == 0.61b0",
    "opentelemetry-instrumentation-psycopg == 0.61b0",
    "opentelemetry-instrumentation-psycopg2 == 0.61b0",
    "opentelemetry-instrumentation-pymemcache == 0.61b0",
    "opentelemetry-instrumentation-pymongo == 0.61b0",
    "opentelemetry-instrumentation-pymssql == 0.61b0",
    "opentelemetry-instrumentation-pymysql == 0.61b0",
    "opentelemetry-instrumentation-pyramid == 0.61b0",
    "opentelemetry-instrumentation-redis == 0.61b0",
    "opentelemetry-instrumentation-remoulade == 0.61b0",
    "opentelemetry-instrumentation-requests == 0.61b0",
    "odigos-opentelemetry-instrumentation-sqlalchemy == 0.61b0",
    "opentelemetry-instrumentation-sqlite3 == 0.61b0",
    "opentelemetry-instrumentation-starlette == 0.61b0",
    "opentelemetry-instrumentation-tornado == 0.61b0",
    "opentelemetry-instrumentation-tortoiseorm == 0.61b0",
    "opentelemetry-instrumentation-threading == 0.61b0",
    "opentelemetry-instrumentation-urllib == 0.61b0",
    "opentelemetry-instrumentation-urllib3 == 0.61b0",
    "opentelemetry-instrumentation-wsgi == 0.61b0",

    # genai
    "opentelemetry-instrumentation-anthropic == 0.50.1",
    "opentelemetry-instrumentation-google-genai == 0.6b0",
    "opentelemetry-instrumentation-langchain == 0.50.1",
    "opentelemetry-instrumentation-openai-agents-v2 == 0.1.0",
    "odigos-opentelemetry-instrumentation-openai-v2 == 2.3b0",
    "opentelemetry-instrumentation-vertexai == 2.1b0",
    "opentelemetry-instrumentation-weaviate == 0.50.1",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.0",
]

[project.entry-points.opentelemetry_post_instrument]
odigos_post = "initializer.post_instrument:run_post_hook"

[project.entry-points.opentelemetry_distro]
odigos = "initializer.distro.distro:OdigosDistro"

[tool.uv.sources]
odigos-opentelemetry-instrumentation-aiohttp-server = { workspace = true }
odigos-opentelemetry-instrumentation-elasticsearch = { workspace = true }
odigos-opentelemetry-instrumentation-openai-v2 = { workspace = true }
odigos-opentelemetry-instrumentation-sqlalchemy = { workspace = true }

[tool.uv.workspace]
members = [
    "agent",
    "instrumentations/*",
]
exclude = [
    "tests/integration/configurator",
]

[tool.setuptools.packages.find]
include = [
    "initializer",
    "initializer.*",
    "opamp",
    "opamp.*",
    "opentelemetry",
    "opentelemetry.*",
]
