[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "starlette==0.41.3",
    "uvicorn==0.32.1",
    "protobuf==5.29.6",
    "grpcio==1.68.1",
    "grpcio-tools==1.68.1",
]

[tool.setuptools]
py-modules = []
