[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-clients-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "starlette==0.41.3",
    "uvicorn==0.32.1",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "httpx==0.28.1",
    "aiohttp==3.11.12",
]

[tool.setuptools]
py-modules = []
