[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "starlette==0.41.3",
    "uvicorn==0.32.1",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]==3.2.3",
    "asyncpg==0.30.0",
    "aiopg==1.4.0",
]

[tool.setuptools]
py-modules = []
