[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythongunicorn-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "gunicorn==22.0.0",
    "uvicorn==0.20.0",
    "importlib-metadata==1.7.0",
    "starlette==0.13.8",
]

[tool.setuptools]
py-modules = []
