[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitmq-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "starlette==0.41.3",
    "uvicorn==0.32.1",
    "pika==1.3.2",
    "aio-pika==9.5.3",
]

[tool.setuptools]
py-modules = []
