[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tortoiseorm-app"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "starlette==0.41.3",
    "uvicorn==0.32.1",
    "tortoise-orm[asyncpg]==0.22.1",
]

[tool.setuptools]
py-modules = []
